--- a/cv.html
+++ b/cv.html
@@ -38,6 +38,7 @@
       padding:24px; margin-bottom:26px;
     }
     h1,h2{ margin:0 0 10px; color:var(--accent) }
+    .subhead{ color:var(--sub); font-size:.9rem; margin-bottom:12px }
     ul{ padding-left:20px; margin:0 }
     li{ margin-bottom:10px }
     .pill{
@@ -69,10 +70,8 @@
   <main>
     <div class="section">
       <h1>Curriculum Vitae</h1>
-      <p>This page summarizes my academic background, research, teaching, and skills. 
-      A full PDF version is available upon request ✿</p>
-      <a class="pill" href="mailto:erin.ricaloglu@mail.utoronto.ca">UToronto email</a>
-      <a class="pill" href="mailto:erin.ricaloglu@gmail.com">Personal email</a>
+      <p>Academic training, research experience, and technical skills. Detailed project descriptions and outputs are available on the <a href="projects.html">Projects</a> page.</p>
+      <a class="pill" href="mailto:erin.ricaloglu@mail.utoronto.ca">Email</a>
       <a class="pill" href="https://www.linkedin.com/in/erinricaloglu">LinkedIn</a>
       <a class="pill" href="https://github.com/erinstar">GitHub</a>
     </div>
@@ -80,65 +79,70 @@
     <div class="section">
       <h2>Education</h2>
       <ul>
-        <li><strong>PhD, Behavioural Neuroscience</strong> — University of Toronto (2025–2030, in progress).  
-        Supervisor: Dr. Iva Zovkic. Focus on histone variant exchange, chromatin remodeling, lysosomal biology, and their roles in memory and Alzheimer’s disease.</li>
-        <li><strong>BSc (Honours) Biology, Minor in Sociology</strong> — McMaster University (2021–2025).  
-        Dean’s Honour List. Honours thesis: computational models of biodiversity in fragmented landscapes. Exchange term at the University of Copenhagen (Ancient Proteomics, 2023).</li>
+        <li>
+          <strong>PhD, Behavioural Neuroscience</strong> — University of Toronto (2025–2030, in progress)<br/>
+          Supervisor: Dr. Iva Zovkic. Focus on histone variant exchange, chromatin regulation,
+          lysosomal biology, and memory in Alzheimer’s disease models.
+        </li>
+        <li>
+          <strong>BSc (Honours) Biology, Minor in Sociology</strong> — McMaster University (2021–2025)<br/>
+          Dean’s Honour List. Honours thesis in computational ecology. Exchange term at the
+          University of Copenhagen (Ancient Proteomics).
+        </li>
       </ul>
     </div>
 
     <div class="section">
       <h2>Research Experience</h2>
+      <div class="subhead">Expanded descriptions available on the Projects page</div>
       <ul>
-        <li><strong>Doctoral Researcher</strong>, University of Toronto (2025– )  
-        Design and implement behavioural assays in rodent models, combined with molecular and genomic tools to study chromatin regulation of cognition and memory.</li>
-        <li><strong>Research Fellow</strong>, CAMH (2025)  
-        Conducted independent project on postpartum depression using rodent models. Observed and scored FST and maternal behaviour assays, performed immunohistochemistry. Presented poster at CAMH conference.</li>
-        <li><strong>Honours Thesis Researcher</strong>, McMaster University (2024–2025)  
-        Developed agent-based models of biodiversity persistence in fragmented landscapes (NetLogo, Python). Presented findings at Ontario Biology Day, McMaster Symposium, and WISE Conference.</li>
-        <li><strong>Undergraduate Research Assistant</strong>, McMaster University (2023–2024)  
-        Contributed to Arabidopsis immunity project. Performed RNA extraction, PCR, and pathogen inoculation experiments to study systemic acquired resistance.</li>
-        <li><strong>Field Researcher</strong>, Operation Wallacea, Honduras (2023)  
-        Conducted amphibian biodiversity surveys and chytrid fungal surveillance in cloud forests. Authored report on chytrid emergence and threats to amphibians.</li>
-      </ul>
-    </div>
-
-    <div class="section">
-      <h2>Teaching & Leadership</h2>
-      <ul>
-        <li><strong>Teaching Assistant & Invigilator</strong>, University of Toronto (2025– ) — tutorials, labs, grading, and exam support for PSY344 (Forensic Psych), PSY393 (Neuropsychology), PSY280 (Sensation & Perception), and PSY387 (Psychology of Music).</li>
-        <li><strong>Outreach Coordinator</strong>, Let’s Talk Science (2025– ) — organize STEM programs for 20+ schools/communities; train and mentor 100+ volunteers; coordinate Science Rendezvous and Let’s Talk Science Challenge events that reach 200+ youth annually.</li>
-        <li><strong>Graduate Communicator</strong>, Sci High (2025) — delivered engaging biomedical research talks in high school classrooms across the GTA alongside other graduate students, promoting equity in STEM pathways.</li>
+        <li>
+          <strong>Doctoral Researcher — Neuroepigenetics & Alzheimer’s Disease</strong><br/>
+          University of Toronto (2025– )
+        </li>
+        <li>
+          <strong>Research Fellow — Behavioural Neuroendocrinology</strong><br/>
+          Centre for Addiction and Mental Health (CAMH) (2025)
+        </li>
+        <li>
+          <strong>Honours Thesis Researcher — Computational Ecology</strong><br/>
+          McMaster University (2024–2025)
+        </li>
+        <li>
+          <strong>Laboratory Assistant — Molecular Biology</strong><br/>
+          McMaster University (2023–2024)
+        </li>
+        <li>
+          <strong>Field Researcher — Conservation Biology</strong><br/>
+          Operation Wallacea, Honduras (2023)
+        </li>
       </ul>
     </div>
 
     <div class="section">
       <h2>Awards & Recognition</h2>
       <ul>
-        
-        <li>Psychological and Brain Sciences Graduate Conference Award (2026)</li>
-        <li>BioTalent Canada Student Award (2025)</li>
+        <li>Graduate Research Colloquium Award — University of Toronto (2025)</li>
+        <li>Psychological & Brain Sciences Conference Award — University of Toronto (2025)</li>
+        <li>BioTalent Canada Scholarship (2025)</li>
         <li>Undergraduate Research Travel Award — McMaster University (2025)</li>
-        <li>Dean’s Honour List (multiple years)</li>
-        <li>Global Experience Award — University of Copenhagen Exchange (2023)</li>
+        <li>Dean’s Honour List — McMaster University</li>
       </ul>
     </div>
 
     <div class="section">
-      <h2>Skills</h2>
+      <h2>Technical Skills</h2>
       <ul>
-        <li><strong>Experimental:</strong> PCR, RNA/DNA extraction, Chip-seq (training), western blotting, immunohistochemistry, rodent behavioural assays, neuroimaging</li>
-        <li><strong>Animal Handling:</strong> Rodent Surgery, Colony Management, Primates </li>
-        <li><strong>Computational:</strong> Python, R, NetLogo, data visualization, basic bioinformatics </li>
-        <li><strong>Professional:</strong> teaching, mentoring, program coordination, science communication, outreach leadership</li>
+        <li><strong>Molecular & Cellular:</strong> PCR, RNA/DNA extraction, western blotting, immunohistochemistry, ChIP-seq (training)</li>
+        <li><strong>Animal Models:</strong> Rodent handling, colony management, behavioural assays, stereotaxic surgery (training)</li>
+        <li><strong>Computational:</strong> Python, R, NetLogo, data visualization, basic bioinformatics</li>
+        <li><strong>Professional:</strong> Scientific writing, research communication, outreach coordination</li>
       </ul>
     </div>
 
     <div class="note">
-      ✦ Full CV (PDF) available — email me at 
-      <a href="mailto:erin.ricaloglu@mail.utoronto.ca">erin.ricaloglu@mail.utoronto.ca</a> 
-      or 
-      <a href="mailto:erin.ricaloglu@gmail.com">erin.ricaloglu@gmail.com</a>.
+      Full CV (PDF) available upon request — 
+      <a href="mailto:erin.ricaloglu@mail.utoronto.ca">erin.ricaloglu@mail.utoronto.ca</a>
     </div>
   </main>
 </body>
