--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
       <div>
         <h2>Contact</h2>
         <p>Email (personal): <a href="mailto:erin.ricaloglu@gmail.com">erin.ricaloglu@gmail.com</a></p>
-        <p>Email (student): <a href="mailto:erin.ricaloglu@utoronto.ca">erin.ricaloglu@mail.utoronto.ca</a></p>
+        <p>Email (student): <a href="mailto:erin.ricaloglu@utoronto.ca">erin.ricaloglu@utoronto.ca</a></p>
         <p class="muted">I can provide a full PDF CV on request.</p>
       </div>
       <img src="d59ff7121c21c01576bb5ebd2e6b3d0c.jpg" alt="Genes to Cells cover" />
