Fix email address formatting in projects.html

--- a/projects.html
+++ b/projects.html
@@ -159,7 +159,7 @@
     <!-- CONTACT -->
     <div class="section">
       <h2>Get in touch</h2>
-      <p>Email (student): <a href="mailto:erin.ricaloglu@utoronto.ca">erin.ricaloglu@mail.utoronto.ca</a></p>
+      <p>Email (student): <a href="mailto:erin.ricaloglu@mail.utoronto.ca">erin.ricaloglu@mail.utoronto.ca</a></p>
       <p class="muted">Personal: <a href="mailto:erin.ricaloglu@gmail.com">erin.ricaloglu@gmail.com</a></p>
     </div>
 
